--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit
-pandas
-scikit-learn
-plotly
-numpy
+streamlit==1.37.1
+pandas==2.2.2
+numpy==1.26.4
+scikit-learn==1.4.2
+plotly==5.22.0
+openpyxl==3.1.2
